--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Node.js Express Website</title>
+    <title>Taiming's Node.js Express Website</title>
 </head>
 <body>
-    <h1>Welcome to My Node.js Express Website!</h1>
+    <h1>Welcome to Taiming's Node.js Express Website!</h1>
     <p>This is a simple web page served by Node.js and Express.</p>
 </body>
 </html>
